--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
     "jquery": "^3.3.1",
-    "mapbox-gl": "^0.52.0-beta.2"
+    "mapbox-gl": "^0.52.0-beta.2",
+    "places.js": "^1.15.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
